--- a/tes.html
+++ b/tes.html
@@ -2,249 +2,235 @@
 <html lang="id">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>📊 Monitoring Produksi Realtime</title>
 
-<!-- Bootstrap -->
+<!-- Bootstrap 5 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <style>
   body {
-    font-family: 'Segoe UI', Arial, sans-serif;
     background-color: #f4f6f8;
-    margin: 0;
-    padding: 0;
+    font-family: 'Segoe UI', sans-serif;
   }
 
-  /* Header teks berjalan */
-  .marquee-text {
+  .marquee {
     background: #083D36;
     color: white;
-    font-size: 28px;
+    font-size: 1.8rem;
     font-weight: bold;
-    padding: 10px;
-    white-space: nowrap;
+    padding: 10px 0;
     overflow: hidden;
-    position: relative;
-  }
-
-  .marquee-text span {
-    display: inline-block;
-    padding-left: 100%;
-    animation: scrollText 15s linear infinite;
-  }
-
-  @keyframes scrollText {
-    0% { transform: translateX(0); }
-    100% { transform: translateX(-100%); }
-  }
-
-  /* Container umum */
-  .container-box {
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    padding: 15px;
-    margin-top: 20px;
   }
 
   h2 {
-    color: #083D36;
     text-align: center;
-    margin-bottom: 15px;
+    color: #333;
+    font-size: 22px;
+    margin-top: 15px;
   }
 
-  table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-
-  th {
-    background-color: #083D36;
+  table th {
+    background: #083D36 !important;
     color: white;
     text-align: center;
-    padding: 10px;
+    vertical-align: middle;
   }
 
-  td {
+  table td {
     text-align: center;
-    padding: 10px;
+    vertical-align: middle;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 600;
   }
 
-  tr:nth-child(even) {
-    background-color: #f9f9f9;
-  }
+  tr:nth-child(even) { background-color: #f9f9f9; }
+  tr:hover { background-color: #e3f2fd; transition: 0.3s; }
 
-  .footer {
-    text-align: right;
-    font-size: 13px;
-    padding: 5px 10px;
-    color: #666;
-  }
-
-  /* Shift Table */
-  .shift-wrapper {
+  .top-bar {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    margin-top: 20px;
+    margin: 20px 3%;
     flex-wrap: wrap;
   }
 
-  .shift-table {
-    width: 400px;
-    border: 1px solid #ccc;
+  .total-box {
+    background: white;
     border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     overflow: hidden;
+    width: 180px;
+    transition: transform 0.2s ease;
   }
 
-  .shift-table th, .shift-table td {
-    border: 1px solid #ddd;
-    padding: 8px;
+  .total-box:hover {
+    transform: scale(1.03);
+  }
+
+  .total-box th {
+    background: #083D36;
+    color: white;
     font-size: 18px;
+    padding: 10px;
   }
 
-  /* Jam & Logo */
-  #tanggal { font-size: 18px; font-weight: 600; color: #333; text-align: center; }
-  #jam { font-size: 36px; font-weight: bold; color: #006400; text-align: center; }
+  .total-box td {
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    padding: 10px;
+    color: #333;
+  }
 
-  .logo-row {
+  #jam {
+    font-size: 40px;
+    font-weight: bold;
+    color: #006400;
+  }
+
+  #tanggal {
+    font-size: 20px;
+    font-weight: 600;
+  }
+
+  .footer-zinus {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 15px;
-    margin-top: 10px;
+    flex-direction: column;
+    background: #083D36;
+    color: white;
+    padding: 20px 10px;
+    border-top: 4px solid #004d00;
+    margin-top: 15px;
+  }
+
+  .footer-zinus p {
+    margin: 5px 0 10px;
+    font-size: 16px;
   }
 
   .zinus-logo, .zinus-logo1 {
     width: 60px;
     height: 60px;
     border-radius: 10px;
+    background: white;
     object-fit: contain;
     box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    animation: fadeZoomIn 1.5s ease-out forwards, pulse 6s ease-in-out infinite;
   }
 
-  footer.footer-zinus {
-    background: #083D36;
-    color: white;
-    text-align: center;
-    padding: 15px 10px;
-    border-top: 4px solid #004d00;
-    margin-top: 25px;
+  @keyframes fadeZoomIn {
+    0% { opacity: 0; transform: scale(0.8); }
+    100% { opacity: 1; transform: scale(1); }
   }
 
-  /* Dropdown posisi kiri */
-  .dropdown-shift {
-    margin-bottom: 10px;
+  @keyframes pulse {
+    0%, 100% { transform: scale(1); }
+    50% { transform: scale(1.05); }
+  }
+
+  @media (max-width: 768px) {
+    table td { font-size: 14px; }
+    .total-box { width: 140px; }
+    #jam { font-size: 28px; }
+    #tanggal { font-size: 14px; }
   }
 </style>
 </head>
 <body>
 
-<!-- Teks berjalan -->
-<div class="marquee-text">
-  <span>📊 HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING - ZINUS INDONESIA 📦</span>
+<!-- === TEKS BERJALAN === -->
+<div class="marquee">
+  <marquee behavior="scroll" direction="left" scrollamount="6">
+    🔹 HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING 🔹
+  </marquee>
 </div>
 
-<!-- Tabel Topper -->
-<div class="container container-box">
-  <div class="d-flex justify-content-between align-items-center mb-2">
-    <div class="dropdown-shift">
-      <select id="shiftSelector" class="form-select form-select-sm" style="width:150px;">
-        <option value="1">Shift 1</option>
+<!-- === AREA DROPDOWN & HEADER === -->
+<div class="container mt-3">
+  <div class="d-flex justify-content-between align-items-center mb-2 flex-wrap">
+    <div>
+      <label for="shiftSelector" class="fw-bold me-2">Pilih Shift:</label>
+      <select id="shiftSelector" class="form-select d-inline-block w-auto">
+        <option value="1" selected>Shift 1</option>
         <option value="2">Shift 2</option>
       </select>
     </div>
-    <h2 class="flex-grow-1 text-center m-0">TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
-    <div style="width:150px;"></div>
+    <h2 class="text-center flex-grow-1">LINE TOPPER</h2>
+  </div>
+</div>
+
+<!-- === TABEL TOPPER === -->
+<div class="container mb-4">
+  <h2>TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
+  <div class="table-responsive shadow-sm rounded">
+    <table class="table table-bordered table-hover align-middle" id="tableTopper">
+      <thead>
+        <tr>
+          <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
+          <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
+        </tr>
+      </thead>
+      <tbody id="bodyTopper">
+        <tr><td colspan="13" class="text-center text-muted">Loading data...</td></tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="text-end text-muted small">Auto-refresh setiap 30 detik</div>
+</div>
+
+<!-- === TABEL FOAM === -->
+<div class="container mb-4">
+  <h2>FOAM PACKING TARGET : 75 Pcs/Jam</h2>
+  <div class="table-responsive shadow-sm rounded">
+    <table class="table table-bordered table-hover align-middle" id="tableFoam">
+      <thead>
+        <tr>
+          <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
+          <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
+        </tr>
+      </thead>
+      <tbody id="bodyFoam">
+        <tr><td colspan="13" class="text-center text-muted">Loading data...</td></tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="text-end text-muted small" id="status">Auto-refresh setiap 30 detik</div>
+</div>
+
+<!-- === TOTAL & JAM === -->
+<div class="top-bar">
+  <div class="d-flex gap-3 flex-wrap">
+    <div class="total-box">
+      <table><thead><tr><th>TOTAL TOPPER</th></tr></thead>
+      <tbody id="bodyTotalTopper"><tr><td>0</td></tr></tbody></table>
+    </div>
+
+    <div class="total-box">
+      <table><thead><tr><th>TOTAL FOAM</th></tr></thead>
+      <tbody id="bodyTotalFoam"><tr><td>0</td></tr></tbody></table>
+    </div>
   </div>
 
-  <table id="tableTopper" class="table table-bordered">
-    <thead>
-      <tr>
-        <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
-        <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th>
-        <th>19:30</th><th>AVG</th><th>TOTAL</th>
-      </tr>
-    </thead>
-    <tbody id="bodyTopper">
-      <tr><td colspan="13">Loading data...</td></tr>
-    </tbody>
-  </table>
-  <div class="footer">Auto-refresh setiap 30 detik</div>
-</div>
-
-<!-- Tabel Foam -->
-<div class="container container-box">
-  <h2>FOAM PACKING TARGET : 75 Pcs/Jam</h2>
-  <table id="tableFoam" class="table table-bordered">
-    <thead>
-      <tr>
-        <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
-        <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th>
-        <th>19:30</th><th>AVG</th><th>TOTAL</th>
-      </tr>
-    </thead>
-    <tbody id="bodyFoam">
-      <tr><td colspan="13">Loading data...</td></tr>
-    </tbody>
-  </table>
-  <div class="footer" id="status">Auto-refresh setiap 30 detik</div>
-</div>
-
-<!-- Shift & Jam -->
-<div class="container shift-wrapper">
-  <table class="shift-table table table-bordered">
-    <thead>
-      <tr>
-        <th colspan="2">SHIFT 1</th>
-        <th colspan="2">SHIFT 2</th>
-      </tr>
-      <tr>
-        <th>Topper</th><th>Foam</th><th>Topper</th><th>Foam</th>
-      </tr>
-    </thead>
-    <tbody id="shiftBody">
-      <tr><td colspan="4">Loading shift data...</td></tr>
-    </tbody>
-  </table>
-
-  <div>
+  <div class="text-center">
     <div id="tanggal"></div>
     <div id="jam"></div>
-    <div class="logo-row">
-      <img src="logo-zinus1.gif" alt="Zinus Logo" class="zinus-logo1">
-      <img src="Hyundai_Logo.png" alt="Hyundai Logo" class="zinus-logo">
+    <div class="d-flex justify-content-center align-items-center gap-3 mt-2">
+      <img src="logo-zinus1.gif" class="zinus-logo1" alt="Zinus Logo">
+      <img src="Hyundai_Logo.png" class="zinus-logo" alt="Hyundai Logo">
     </div>
   </div>
 </div>
 
-<!-- Footer -->
+<!-- === FOOTER === -->
 <footer class="footer-zinus">
   <p>© Zinus Global Indonesia | Factory 2 Karawang</p>
 </footer>
 
+<!-- === SCRIPT === -->
 <script>
-// === JAM ===
-function updateClock() {
-  const now = new Date();
-  document.getElementById("tanggal").textContent = now.toLocaleDateString("id-ID", {
-    weekday: "long", year: "numeric", month: "long", day: "numeric"
-  });
-  document.getElementById("jam").textContent = now.toLocaleTimeString("id-ID", { hour12: false });
-}
-setInterval(updateClock, 1000);
-updateClock();
-
-// === DROPDOWN SHIFT ===
-document.getElementById("shiftSelector").addEventListener("change", function() {
-  if (this.value === "2") window.location.href = "shift2.html";
-  else window.location.href = "index.html";
-});
-
-// === AMBIL DATA GOOGLE SHEET ===
 const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTo_FFsfIx50Tgyzo2JZneIQtNBfIpP6eJ-KhzS1qenNIqy7rjmMaE1h1H5X2e_-7jdCbcwq6wdk5oL/pub?gid=773938712&single=true&output=csv";
 
 async function loadSheetData() {
@@ -254,32 +240,65 @@ async function loadSheetData() {
     const response = await fetch(SHEET_URL + "&t=" + Date.now());
     const text = await response.text();
     const rows = text.trim().split("\n").map(r => r.split(","));
+
     const topperBody = document.getElementById("bodyTopper");
     const foamBody = document.getElementById("bodyFoam");
-    const shiftBody = document.getElementById("shiftBody");
-    topperBody.innerHTML = foamBody.innerHTML = shiftBody.innerHTML = "";
+    topperBody.innerHTML = ""; foamBody.innerHTML = "";
 
     const topperRows = rows.slice(5, 8);
     const foamRows = rows.slice(11, 16);
 
     topperRows.forEach(row => {
-      topperBody.innerHTML += `<tr>${row.slice(0,13).map(c=>`<td>${c}</td>`).join("")}</tr>`;
-    });
-    foamRows.forEach(row => {
-      foamBody.innerHTML += `<tr>${row.slice(0,13).map(c=>`<td>${c}</td>`).join("")}</tr>`;
+      const tr = document.createElement("tr");
+      row.slice(0, 13).forEach((cell, index) => {
+        const td = document.createElement("td");
+        td.textContent = cell;
+        const val = parseFloat(cell);
+        if (index > 0 && !isNaN(val)) {
+          if (val < 90 && val > 0) td.style.backgroundColor = "#ffcccc";
+        }
+        tr.appendChild(td);
+      });
+      topperBody.appendChild(tr);
     });
 
-    const totalRow = rows[18];
-    if (totalRow)
-      shiftBody.innerHTML = `<tr><td>${totalRow[2]||0}</td><td>${totalRow[3]||0}</td><td>${totalRow[4]||0}</td><td>${totalRow[5]||0}</td></tr>`;
+    foamRows.forEach(row => {
+      const tr = document.createElement("tr");
+      row.slice(0, 13).forEach((cell, index) => {
+        const td = document.createElement("td");
+        td.textContent = cell;
+        const val = parseFloat(cell);
+        if (index > 0 && !isNaN(val)) {
+          if (val < 75 && val > 0) td.style.backgroundColor = "#ffcccc";
+        }
+        tr.appendChild(td);
+      });
+      foamBody.appendChild(tr);
+    });
+
+    document.getElementById("bodyTotalTopper").innerHTML = `<tr><td>${rows[18]?.[0] || 0}</td></tr>`;
+    document.getElementById("bodyTotalFoam").innerHTML = `<tr><td>${rows[18]?.[1] || 0}</td></tr>`;
 
     status.textContent = "✅ Diperbarui: " + new Date().toLocaleTimeString("id-ID");
   } catch {
     status.textContent = "⚠️ Gagal memuat data";
   }
 }
+
+function updateClock() {
+  const now = new Date();
+  document.getElementById("tanggal").textContent = now.toLocaleDateString("id-ID", { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
+  document.getElementById("jam").textContent = now.toLocaleTimeString("id-ID", { hour12: false });
+}
+setInterval(updateClock, 1000);
+updateClock();
 loadSheetData();
 setInterval(loadSheetData, 30000);
+
+document.getElementById("shiftSelector").addEventListener("change", function() {
+  const v = this.value;
+  window.location.href = v === "2" ? "shift2.html" : "index.html";
+});
 </script>
 
 </body>
