--- a/tes.html
+++ b/tes.html
@@ -2,51 +2,76 @@
 <html lang="id">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>📊 Monitoring Produksi Realtime</title>
-
-<!-- Bootstrap 5 -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
 <style>
   body {
+    font-family: 'Segoe UI', Arial, sans-serif;
     background-color: #f4f6f8;
-    font-family: 'Segoe UI', sans-serif;
+    margin: 0;
+    padding: 0;
   }
 
   .marquee {
     background: #083D36;
     color: white;
-    font-size: 1.8rem;
-    font-weight: bold;
     padding: 10px 0;
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center;
     overflow: hidden;
+    white-space: nowrap;
   }
 
   h2 {
     text-align: center;
     color: #333;
+    margin: 10px 0 10px;
     font-size: 22px;
-    margin-top: 15px;
   }
 
-  table th {
-    background: #083D36 !important;
+  .container {
+    width: 95%;
+    margin: 15px auto;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    overflow-x: auto;
+    padding: 0;
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    table-layout: fixed;
+  }
+
+  th, td {
+    padding: 10px 6px;
+    text-align: center;
+    font-size: 25px;
+  }
+
+  th {
+    background: #083D36;
     color: white;
-    text-align: center;
-    vertical-align: middle;
-  }
-
-  table td {
-    text-align: center;
-    vertical-align: middle;
-    font-size: 20px;
-    font-weight: 600;
   }
 
   tr:nth-child(even) { background-color: #f9f9f9; }
-  tr:hover { background-color: #e3f2fd; transition: 0.3s; }
+  tr:hover { background-color: #e3f2fd; }
 
+  .footer {
+    text-align: right;
+    font-size: 12px;
+    padding: 8px;
+    background: #f1f1f1;
+    color: #666;
+    border-top: 1px solid #ddd;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+
+  /* === BAGIAN TOTAL + JAM === */
   .top-bar {
     display: flex;
     justify-content: space-between;
@@ -55,17 +80,24 @@
     flex-wrap: wrap;
   }
 
+  .total-wrapper {
+    display: flex;
+    justify-content: flex-start;
+    gap: 20px;
+    align-items: center;
+  }
+
   .total-box {
     background: white;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     overflow: hidden;
     width: 180px;
-    transition: transform 0.2s ease;
   }
 
-  .total-box:hover {
-    transform: scale(1.03);
+  .total-box table {
+    width: 100%;
+    border-collapse: collapse;
   }
 
   .total-box th {
@@ -83,32 +115,39 @@
     color: #333;
   }
 
-  #jam {
-    font-size: 40px;
-    font-weight: bold;
-    color: #006400;
+  /* === JAM DAN LOGO === */
+  .total-wrapper1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-right: 3%;
+    text-align: center;
+  }
+
+  .datetime {
+    margin-bottom: 10px;
   }
 
   #tanggal {
     font-size: 20px;
     font-weight: 600;
+    color: #333;
   }
 
-  .footer-zinus {
+  #jam {
+    font-size: 40px;
+    font-weight: bold;
+    color: #006400;
+    margin-top: 5px;
+    text-align: center;
+  }
+
+  .logo-row {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    background: #083D36;
-    color: white;
-    padding: 20px 10px;
-    border-top: 4px solid #004d00;
-    margin-top: 15px;
-  }
-
-  .footer-zinus p {
-    margin: 5px 0 10px;
-    font-size: 16px;
+    gap: 15px;
   }
 
   .zinus-logo, .zinus-logo1 {
@@ -122,20 +161,71 @@
   }
 
   @keyframes fadeZoomIn {
-    0% { opacity: 0; transform: scale(0.8); }
-    100% { opacity: 1; transform: scale(1); }
+    0% {
+      opacity: 0;
+      transform: scale(0.8) rotate(-5deg);
+    }
+    100% {
+      opacity: 1;
+      transform: scale(1) rotate(0deg);
+    }
   }
 
   @keyframes pulse {
-    0%, 100% { transform: scale(1); }
+    0% { transform: scale(1); }
     50% { transform: scale(1.05); }
+    100% { transform: scale(1); }
   }
 
+  /* === FOOTER ZINUS === */
+  .footer-zinus {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #083D36;
+    color: white;
+    padding: 20px 10px;
+    border-top: 4px solid #004d00;
+    margin-top: 10px;
+  }
+
+  .footer-zinus p {
+    margin: 5px 0 15px;
+    font-size: 16px;
+    letter-spacing: 0.5px;
+  }
+
+  /* === RESPONSIVE === */
   @media (max-width: 768px) {
-    table td { font-size: 14px; }
-    .total-box { width: 140px; }
-    #jam { font-size: 28px; }
+    .container {
+      width: 100%;
+      margin: 10px 0;
+      border-radius: 0;
+      box-shadow: none;
+    }
+
+    th, td {
+      font-size: 14px;
+      padding: 6px 4px;
+    }
+
+    .marquee { font-size: 16px; padding: 8px 0; }
+    h2 { font-size: 18px; }
+    #jam { font-size: 24px; }
     #tanggal { font-size: 14px; }
+
+    .zinus-logo, .zinus-logo1 {
+      width: 45px;
+      height: 45px;
+    }
+
+    .logo-row {
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    .footer-zinus p { font-size: 14px; }
   }
 </style>
 </head>
@@ -144,92 +234,110 @@
 <!-- === TEKS BERJALAN === -->
 <div class="marquee">
   <marquee behavior="scroll" direction="left" scrollamount="6">
-    🔹 HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING 🔹
+    HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING
   </marquee>
 </div>
 
-<!-- === AREA DROPDOWN & HEADER === -->
-<div class="container mt-3">
-  <div class="d-flex justify-content-between align-items-center mb-2 flex-wrap">
-    <div>
-      <label for="shiftSelector" class="fw-bold me-2">Pilih Shift:</label>
-      <select id="shiftSelector" class="form-select d-inline-block w-auto">
-        <option value="1" selected>Shift 1</option>
-        <option value="2">Shift 2</option>
-      </select>
-    </div>
-    <h2 class="text-center flex-grow-1">LINE TOPPER</h2>
-  </div>
-</div>
-
 <!-- === TABEL TOPPER === -->
-<div class="container mb-4">
+<div class="container">
   <h2>TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
-  <div class="table-responsive shadow-sm rounded">
-    <table class="table table-bordered table-hover align-middle" id="tableTopper">
-      <thead>
-        <tr>
-          <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
-          <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
-        </tr>
-      </thead>
-      <tbody id="bodyTopper">
-        <tr><td colspan="13" class="text-center text-muted">Loading data...</td></tr>
-      </tbody>
-    </table>
+  <div class="total-wrapper">
+    <div class="total-box">
+      <table>
+        <thead><tr><th>
+              <select id="shiftSelector" 
+                style="font-size:28px;font-weight:bold;text-align:center;width:100%;border:none;background:none;appearance:none;outline:none;cursor:pointer;">
+                <option value="SHIFT 1" selected>SHIFT 1</option>
+                <option value="SHIFT 2">SHIFT 2</option>
+              </select>
+        </th></tr></thead>
+      </table>
+    </div>
   </div>
-  <div class="text-end text-muted small">Auto-refresh setiap 30 detik</div>
+  <table id="tableTopper">
+    <thead>
+      <tr>
+        <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
+        <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
+      </tr>
+    </thead>
+    <tbody id="bodyTopper">
+      <tr><td class="loading" colspan="13">Loading data...</td></tr>
+    </tbody>
+  </table>
+  <div class="footer">Auto-refresh setiap 30 detik</div>
 </div>
 
 <!-- === TABEL FOAM === -->
-<div class="container mb-4">
+<div class="container">
   <h2>FOAM PACKING TARGET : 75 Pcs/Jam</h2>
-  <div class="table-responsive shadow-sm rounded">
-    <table class="table table-bordered table-hover align-middle" id="tableFoam">
-      <thead>
-        <tr>
-          <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
-          <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
-        </tr>
-      </thead>
-      <tbody id="bodyFoam">
-        <tr><td colspan="13" class="text-center text-muted">Loading data...</td></tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="text-end text-muted small" id="status">Auto-refresh setiap 30 detik</div>
+  <table id="tableFoam">
+    <thead>
+      <tr>
+        <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
+        <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
+      </tr>
+    </thead>
+    <tbody id="bodyFoam">
+      <tr><td class="loading" colspan="13">Loading data...</td></tr>
+    </tbody>
+  </table>
+  <div class="footer" id="status">Auto-refresh setiap 30 detik</div>
 </div>
 
-<!-- === TOTAL & JAM === -->
+<!-- === BAGIAN TOTAL DAN JAM === -->
 <div class="top-bar">
-  <div class="d-flex gap-3 flex-wrap">
+
+  <div class="total-wrapper">
     <div class="total-box">
-      <table><thead><tr><th>TOTAL TOPPER</th></tr></thead>
-      <tbody id="bodyTotalTopper"><tr><td>0</td></tr></tbody></table>
+      <table>
+        <thead><tr><th>SHIFT</th></tr></thead>
+        <tbody>
+          <tr>
+            <td>
+              <select id="shiftSelector" 
+                style="font-size:28px;font-weight:bold;text-align:center;width:100%;border:none;background:none;appearance:none;outline:none;cursor:pointer;">
+                <option value="1" selected>1</option>
+                <option value="2">2</option>
+              </select>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     <div class="total-box">
-      <table><thead><tr><th>TOTAL FOAM</th></tr></thead>
-      <tbody id="bodyTotalFoam"><tr><td>0</td></tr></tbody></table>
+      <table id="tableTotalTopper">
+        <thead><tr><th>TOTAL TOPPER</th></tr></thead>
+        <tbody id="bodyTotalTopper"><tr><td>0</td></tr></tbody>
+      </table>
+    </div>
+
+    <div class="total-box">
+      <table id="tableTotalFoam">
+        <thead><tr><th>TOTAL FOAM</th></tr></thead>
+        <tbody id="bodyTotalFoam"><tr><td>0</td></tr></tbody>
+      </table>
     </div>
   </div>
 
-  <div class="text-center">
-    <div id="tanggal"></div>
-    <div id="jam"></div>
-    <div class="d-flex justify-content-center align-items-center gap-3 mt-2">
-      <img src="logo-zinus1.gif" class="zinus-logo1" alt="Zinus Logo">
-      <img src="Hyundai_Logo.png" class="zinus-logo" alt="Hyundai Logo">
+  <div class="total-wrapper1">
+    <div class="datetime">
+      <div id="tanggal"></div>
+      <div id="jam"></div>
+    </div>
+    <div class="logo-row">
+      <img src="logo-zinus1.gif" alt="Zinus Logo" class="zinus-logo1">
+      <img src="Hyundai_Logo.png" alt="Hyundai Logo" class="zinus-logo">
     </div>
   </div>
 </div>
 
-<!-- === FOOTER === -->
+<!-- === FOOTER ZINUS === -->
 <footer class="footer-zinus">
-  <p>© Zinus Global Indonesia | Factory 2 Karawang</p>
+  <p>© Zinus Global Indonesia | Factory 2 Karawang</p>  
 </footer>
 
-<!-- === SCRIPT === -->
 <script>
 const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTo_FFsfIx50Tgyzo2JZneIQtNBfIpP6eJ-KhzS1qenNIqy7rjmMaE1h1H5X2e_-7jdCbcwq6wdk5oL/pub?gid=773938712&single=true&output=csv";
 
@@ -237,13 +345,20 @@ async function loadSheetData() {
   const status = document.getElementById("status");
   try {
     status.textContent = "🔄 Memuat data...";
-    const response = await fetch(SHEET_URL + "&t=" + Date.now());
+    const response = await fetch(SHEET_URL + "&t=" + Date.now(), { cache: "no-store" });
+    if (!response.ok) throw new Error("Gagal ambil data (" + response.status + ")");
     const text = await response.text();
     const rows = text.trim().split("\n").map(r => r.split(","));
 
     const topperBody = document.getElementById("bodyTopper");
     const foamBody = document.getElementById("bodyFoam");
-    topperBody.innerHTML = ""; foamBody.innerHTML = "";
+    const totalTopperBody = document.getElementById("bodyTotalTopper");
+    const totalFoamBody = document.getElementById("bodyTotalFoam");
+
+    topperBody.innerHTML = "";
+    foamBody.innerHTML = "";
+    totalTopperBody.innerHTML = "";
+    totalFoamBody.innerHTML = "";
 
     const topperRows = rows.slice(5, 8);
     const foamRows = rows.slice(11, 16);
@@ -253,9 +368,14 @@ async function loadSheetData() {
       row.slice(0, 13).forEach((cell, index) => {
         const td = document.createElement("td");
         td.textContent = cell;
-        const val = parseFloat(cell);
-        if (index > 0 && !isNaN(val)) {
-          if (val < 90 && val > 0) td.style.backgroundColor = "#ffcccc";
+        td.style.fontWeight = "bold";
+
+        const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
+        if (index > 0 && !isNaN(cleanValue)) {
+          if (cleanValue < 90 && cleanValue > 0) {
+            td.style.backgroundColor = "#ffcccc";
+            td.style.color = "#a80000";
+          }
         }
         tr.appendChild(td);
       });
@@ -267,20 +387,33 @@ async function loadSheetData() {
       row.slice(0, 13).forEach((cell, index) => {
         const td = document.createElement("td");
         td.textContent = cell;
-        const val = parseFloat(cell);
-        if (index > 0 && !isNaN(val)) {
-          if (val < 75 && val > 0) td.style.backgroundColor = "#ffcccc";
+        td.style.fontWeight = "bold";
+
+        const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
+        if (index > 0 && !isNaN(cleanValue)) {
+          if (cleanValue < 75 && cleanValue > 0) {
+            td.style.backgroundColor = "#ffcccc";
+            td.style.color = "#a80000";
+          }
         }
         tr.appendChild(td);
       });
       foamBody.appendChild(tr);
     });
 
-    document.getElementById("bodyTotalTopper").innerHTML = `<tr><td>${rows[18]?.[0] || 0}</td></tr>`;
-    document.getElementById("bodyTotalFoam").innerHTML = `<tr><td>${rows[18]?.[1] || 0}</td></tr>`;
+    const totalRow = rows[18];
+    if (totalRow) {
+      const topperValue = totalRow[0] || "0";
+      const foamValue = totalRow[1] || "0";
+      totalTopperBody.innerHTML = `<tr><td>${topperValue}</td></tr>`;
+      totalFoamBody.innerHTML = `<tr><td>${foamValue}</td></tr>`;
+    }
 
-    status.textContent = "✅ Diperbarui: " + new Date().toLocaleTimeString("id-ID");
-  } catch {
+    const now = new Date();
+    status.textContent = "✅ Diperbarui: " + now.toLocaleTimeString("id-ID");
+
+  } catch (err) {
+    console.error("Fetch error:", err);
     status.textContent = "⚠️ Gagal memuat data";
   }
 }
@@ -290,16 +423,25 @@ function updateClock() {
   document.getElementById("tanggal").textContent = now.toLocaleDateString("id-ID", { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
   document.getElementById("jam").textContent = now.toLocaleTimeString("id-ID", { hour12: false });
 }
+
 setInterval(updateClock, 1000);
 updateClock();
 loadSheetData();
 setInterval(loadSheetData, 30000);
 
 document.getElementById("shiftSelector").addEventListener("change", function() {
-  const v = this.value;
-  window.location.href = v === "2" ? "shift2.html" : "index.html";
+  const value = this.value;
+  if (value === "2") {
+    window.location.href = "shift2.html";
+  } else {
+    window.location.href = "index.html";
+  }
 });
 </script>
-
 </body>
 </html>
+
+
+
+
+
