--- a/tes.html
+++ b/tes.html
@@ -263,10 +263,9 @@
 
 <!-- === SHIFT SELECTOR DI ATAS TABEL === -->
 <div class="shift-bar">
-  <label for="shiftSelect">SHIFT :</label>
   <select id="shiftSelect">
-    <option value="1" selected>1</option>
-    <option value="2">2</option>
+    <option value="SHIFT 1" selected>SHIFT 1</option>
+    <option value="SHIFT 2">SHIFT 2</option>
   </select>
 </div>
 
