--- a/tes.html
+++ b/tes.html
@@ -272,6 +272,10 @@
 <!-- === TABEL TOPPER === -->
 <div class="container">
   <h2>TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
+  <select id="shiftSelect">
+    <option value="SHIFT 1" selected>SHIFT 1</option>
+    <option value="SHIFT 2">SHIFT 2</option>
+  </select>
   <table id="tableTopper">
     <thead>
       <tr>
