--- a/tes.html
+++ b/tes.html
@@ -272,10 +272,12 @@
 <!-- === TABEL TOPPER === -->
 <div class="container">
   <h2>TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
+  <div class="shift-bar">
   <select id="shiftSelect">
     <option value="SHIFT 1" selected>SHIFT 1</option>
     <option value="SHIFT 2">SHIFT 2</option>
   </select>
+</div>
   <table id="tableTopper">
     <thead>
       <tr>
