--- a/tes.html
+++ b/tes.html
@@ -30,30 +30,6 @@
     font-size: 22px;
   }
 
-  .header-shift {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 3% 10px 3%;
-  }
-
-  .header-shift h2 {
-    margin: 0;
-    font-size: 22px;
-    color: #333;
-  }
-
-  .shift-select {
-    font-size: 20px;
-    font-weight: bold;
-    padding: 5px 10px;
-    border: 2px solid #083D36;
-    border-radius: 6px;
-    background: #fff;
-    color: #083D36;
-    cursor: pointer;
-  }
-
   .container {
     width: 95%;
     margin: 15px auto;
@@ -95,6 +71,7 @@
     border-bottom-right-radius: 10px;
   }
 
+  /* === BAGIAN TOTAL + JAM === */
   .top-bar {
     display: flex;
     justify-content: space-between;
@@ -138,6 +115,7 @@
     color: #333;
   }
 
+  /* === JAM DAN LOGO === */
   .total-wrapper1 {
     display: flex;
     flex-direction: column;
@@ -183,8 +161,14 @@
   }
 
   @keyframes fadeZoomIn {
-    0% { opacity: 0; transform: scale(0.8) rotate(-5deg); }
-    100% { opacity: 1; transform: scale(1) rotate(0deg); }
+    0% {
+      opacity: 0;
+      transform: scale(0.8) rotate(-5deg);
+    }
+    100% {
+      opacity: 1;
+      transform: scale(1) rotate(0deg);
+    }
   }
 
   @keyframes pulse {
@@ -193,6 +177,7 @@
     100% { transform: scale(1); }
   }
 
+  /* === FOOTER ZINUS === */
   .footer-zinus {
     display: flex;
     justify-content: center;
@@ -210,30 +195,68 @@
     font-size: 16px;
     letter-spacing: 0.5px;
   }
+
+  /* === RESPONSIVE === */
+  @media (max-width: 768px) {
+    .container {
+      width: 100%;
+      margin: 10px 0;
+      border-radius: 0;
+      box-shadow: none;
+    }
+
+    th, td {
+      font-size: 14px;
+      padding: 6px 4px;
+    }
+
+    .marquee { font-size: 16px; padding: 8px 0; }
+    h2 { font-size: 18px; }
+    #jam { font-size: 24px; }
+    #tanggal { font-size: 14px; }
+
+    .zinus-logo, .zinus-logo1 {
+      width: 45px;
+      height: 45px;
+    }
+
+    .logo-row {
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    .footer-zinus p { font-size: 14px; }
+  }
 </style>
 </head>
 <body>
 
+<!-- === TEKS BERJALAN === -->
 <div class="marquee">
   <marquee behavior="scroll" direction="left" scrollamount="6">
     HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING
   </marquee>
 </div>
-
-<!-- === SHIFT DROPDOWN + TITLE === -->
-<div class="header-shift">
-  <div>
-    <label for="shiftSelector" style="font-size:22px;font-weight:bold;color:#083D36;">Shift</label>
-    <select id="shiftSelector" class="shift-select">
-      <option value="1" selected>Shift 1</option>
-      <option value="2">Shift 2</option>
-    </select>
-  </div>
-  <h2>TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
-</div>
-
+<div class="total-wrapper">
+    <div class="total-box">
+      <table>
+        <thead><tr><th>SHIFT</th></tr></thead>
+        <tbody>
+          <tr>
+            <td>
+              <select id="shiftSelector" 
+                style="font-size:28px;font-weight:bold;text-align:center;width:100%;border:none;background:none;appearance:none;outline:none;cursor:pointer;">
+                <option value="1" selected>1</option>
+                <option value="2">2</option>
+              </select>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 <!-- === TABEL TOPPER === -->
 <div class="container">
+  <h2>TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
   <table id="tableTopper">
     <thead>
       <tr>
@@ -242,7 +265,7 @@
       </tr>
     </thead>
     <tbody id="bodyTopper">
-      <tr><td colspan="13">Loading data...</td></tr>
+      <tr><td class="loading" colspan="13">Loading data...</td></tr>
     </tbody>
   </table>
   <div class="footer">Auto-refresh setiap 30 detik</div>
@@ -259,15 +282,33 @@
       </tr>
     </thead>
     <tbody id="bodyFoam">
-      <tr><td colspan="13">Loading data...</td></tr>
+      <tr><td class="loading" colspan="13">Loading data...</td></tr>
     </tbody>
   </table>
   <div class="footer" id="status">Auto-refresh setiap 30 detik</div>
 </div>
 
-<!-- === BAGIAN TOTAL & JAM === -->
+<!-- === BAGIAN TOTAL DAN JAM === -->
 <div class="top-bar">
+
   <div class="total-wrapper">
+    <div class="total-box">
+      <table>
+        <thead><tr><th>SHIFT</th></tr></thead>
+        <tbody>
+          <tr>
+            <td>
+              <select id="shiftSelector" 
+                style="font-size:28px;font-weight:bold;text-align:center;width:100%;border:none;background:none;appearance:none;outline:none;cursor:pointer;">
+                <option value="1" selected>1</option>
+                <option value="2">2</option>
+              </select>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
     <div class="total-box">
       <table id="tableTotalTopper">
         <thead><tr><th>TOTAL TOPPER</th></tr></thead>
@@ -295,6 +336,7 @@
   </div>
 </div>
 
+<!-- === FOOTER ZINUS === -->
 <footer class="footer-zinus">
   <p>© Zinus Global Indonesia | Factory 2 Karawang</p>  
 </footer>
@@ -307,6 +349,7 @@ async function loadSheetData() {
   try {
     status.textContent = "🔄 Memuat data...";
     const response = await fetch(SHEET_URL + "&t=" + Date.now(), { cache: "no-store" });
+    if (!response.ok) throw new Error("Gagal ambil data (" + response.status + ")");
     const text = await response.text();
     const rows = text.trim().split("\n").map(r => r.split(","));
 
@@ -325,13 +368,17 @@ async function loadSheetData() {
 
     topperRows.forEach(row => {
       const tr = document.createElement("tr");
-      row.slice(0, 13).forEach((cell, i) => {
+      row.slice(0, 13).forEach((cell, index) => {
         const td = document.createElement("td");
         td.textContent = cell;
-        const val = parseFloat(cell.replace(/[^0-9.]/g, ""));
-        if (i > 0 && !isNaN(val) && val < 90 && val > 0) {
-          td.style.background = "#ffcccc";
-          td.style.color = "#a80000";
+        td.style.fontWeight = "bold";
+
+        const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
+        if (index > 0 && !isNaN(cleanValue)) {
+          if (cleanValue < 90 && cleanValue > 0) {
+            td.style.backgroundColor = "#ffcccc";
+            td.style.color = "#a80000";
+          }
         }
         tr.appendChild(td);
       });
@@ -340,13 +387,17 @@ async function loadSheetData() {
 
     foamRows.forEach(row => {
       const tr = document.createElement("tr");
-      row.slice(0, 13).forEach((cell, i) => {
+      row.slice(0, 13).forEach((cell, index) => {
         const td = document.createElement("td");
         td.textContent = cell;
-        const val = parseFloat(cell.replace(/[^0-9.]/g, ""));
-        if (i > 0 && !isNaN(val) && val < 75 && val > 0) {
-          td.style.background = "#ffcccc";
-          td.style.color = "#a80000";
+        td.style.fontWeight = "bold";
+
+        const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
+        if (index > 0 && !isNaN(cleanValue)) {
+          if (cleanValue < 75 && cleanValue > 0) {
+            td.style.backgroundColor = "#ffcccc";
+            td.style.color = "#a80000";
+          }
         }
         tr.appendChild(td);
       });
@@ -355,13 +406,17 @@ async function loadSheetData() {
 
     const totalRow = rows[18];
     if (totalRow) {
-      totalTopperBody.innerHTML = `<tr><td>${totalRow[0] || "0"}</td></tr>`;
-      totalFoamBody.innerHTML = `<tr><td>${totalRow[1] || "0"}</td></tr>`;
+      const topperValue = totalRow[0] || "0";
+      const foamValue = totalRow[1] || "0";
+      totalTopperBody.innerHTML = `<tr><td>${topperValue}</td></tr>`;
+      totalFoamBody.innerHTML = `<tr><td>${foamValue}</td></tr>`;
     }
 
-    status.textContent = "✅ Diperbarui: " + new Date().toLocaleTimeString("id-ID");
+    const now = new Date();
+    status.textContent = "✅ Diperbarui: " + now.toLocaleTimeString("id-ID");
+
   } catch (err) {
-    console.error(err);
+    console.error("Fetch error:", err);
     status.textContent = "⚠️ Gagal memuat data";
   }
 }
@@ -377,10 +432,19 @@ updateClock();
 loadSheetData();
 setInterval(loadSheetData, 30000);
 
-document.getElementById("shiftSelector").addEventListener("change", e => {
-  if (e.target.value === "2") window.location.href = "shift2.html";
-  else window.location.href = "index.html";
+document.getElementById("shiftSelector").addEventListener("change", function() {
+  const value = this.value;
+  if (value === "2") {
+    window.location.href = "shift2.html";
+  } else {
+    window.location.href = "index.html";
+  }
 });
 </script>
 </body>
 </html>
+
+
+
+
+
