--- a/tes.html
+++ b/tes.html
@@ -27,7 +27,7 @@
 h2 {
   color: #333;
   margin: 3px 0;
-  font-size: clamp(18px, 3vw, 28px);
+  font-size: clamp(25px, 3vw, 30px);
 }
 
 .h2-header {
@@ -39,7 +39,7 @@ h2 {
 }
 
 .h2-header select {
-  font-size: clamp(16px, 2.5vw, 26px);
+  font-size: clamp(25px, 2.5vw, 30px);
   font-weight: bold;
   border: none;
   background: none;
@@ -245,7 +245,7 @@ tr:hover {
       <option value="1" selected>SHIFT 1</option>
       <option value="2">SHIFT 2</option>
     </select>
-    <h2>TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
+    <h2>TOPPER PACKING TARGET : 90 PC/JAM</h2>
     <div style="width:80px;"></div>
   </div>
 
@@ -266,7 +266,7 @@ tr:hover {
 
 <!-- === FOAM PACKING === -->
 <div class="container">
-  <h2 style="text-align:center;">FOAM PACKING TARGET : 75 Pcs/Jam</h2>
+  <h2 style="text-align:center;">FOAM PACKING TARGET : 75 PC/JAM</h2>
   <table id="tableFoam">
     <thead>
       <tr>
